<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnTestBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/testprinterbt2" />

    <Button
	    android:id="@+id/btnTestBLE"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:text="@string/testprinterbt4" />

    <Button
	    android:id="@+id/btnTestNET"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:text="@string/testprinternet" />
    
    <Button
	    android:id="@+id/btnTestUSB"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:text="@string/testprinterusb" />
        
    <TextView
        android:id="@+id/textViewTicketType"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:text="@string/tickettype" />
    
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonTicket58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tickettype58mm" />

        <RadioButton
            android:id="@+id/radioButtonTicket80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tickettype80mm" />
    </RadioGroup>
	    
</LinearLayout>
